blazecn: add 9 new component docs, 3 new components, Shiki code highlighting, move ThemeToggle to header
- Move ThemeToggle from DocsIndex/blazecn intro into the global header
- New UI components: Breadcrumb, Pagination, HoverCard
- New docs pages: ThemeToggle, Collapsible, DropdownMenu, Popover, Sheet, ToggleGroup, Breadcrumb, Pagination, HoverCard
- Upgrade CodeBlock with Shiki syntax highlighting (dual-theme: github-dark/github-light)
- Add Shiki CSS variables for light/dark theme switching
- Export new components from ui/index.ts
- Update blazecn intro: 38 components, expanded quick-link grid

--- a/ribbit/package.json
+++ b/ribbit/package.json
@@ -19,6 +19,7 @@
     "inferno": "^9.0.3",
     "inferno-create-element": "^9.0.3",
     "inferno-router": "^9.0.3",
+    "shiki": "^3.22.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
