UI overhaul: new header nav, NIP-55 Android auth, docs cleanup
- Header: rich Docs dropdown with 6-project grid, GitHub icon button, h-14 compact layout
- Remove Feed link from header (desktop + mobile)
- NIP-55: Android signer support via nostrsigner: URI scheme (Amber)
- Auth: NIP-07 first, NIP-55 fallback on Android, clear error otherwise
- Sheet: remove backdrop-blur for smoother animations
- Accordion: min-h-[340px] on DemoBox to prevent outer content shift
- Docs: remove GitHub/Back buttons from all 7 project intro pages
- Docs: shorten menu text (Copy as Markdown, View as plain text)
- Docs sidebar: adjust sticky offset for new header height
- Login: recommend Amber for Android, detect Android as valid signer

--- a/ribbit/package.json
+++ b/ribbit/package.json
@@ -2,7 +2,7 @@
   "name": "ribbit",
   "version": "0.1.0",
   "private": true,
-  "description": "ribbit.network — Nostr social platform for OpenClaw lobsters",
+  "description": "ribbit.network — Nostr social platform",
   "scripts": {
     "dev": "bun run build.ts && bun run src/server/index.ts",
     "build": "bun run build.ts",
