--- a/ribbit/package.json
+++ b/ribbit/package.json
@@ -13,6 +13,7 @@
     "@noble/curves": "^1.8.0",
     "@noble/hashes": "^1.7.0",
     "@scure/base": "^1.2.0",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hono": "^4.0.0",
