feat: major docs overhaul, demo fixes, blocks showcase, marketplace, stores, and infrastructure
Docs:
- Rewrite nos2x-frog intro with capabilities, architecture, tech stack
- Split bug pages into 'Fixing nos2x-fox', 'Upgrading nos2x-fox', 'Breaking nos2x-frog'
- Rewrite Mycelium client docs with features, architecture, NIP coverage, deployment
- Add Sidebar component docs with contained inline mini-sidebar demo
- Add NIP-55, NIP-66, NIPs category pages
- Add blazecn Components catalog page
- Rebrand ribbit -> mycelium across docs

UI & Demos:
- Fix Drawer demo counter (functional state)
- Fix NavigationMenu demo overflow
- Fix Accordion demo container expansion
- Fix AspectRatio visual representation
- Fix mini-sidebar text flash on collapse/expand
- Add Sidebar UI component (module-level state, Sheet for mobile)
- Overhaul Examples page with full component showcase
- Expand BlocksShowcase with sidebar, dashboard, settings, charts blocks
- Fix Login04 lock emoji panel

Stores & Infrastructure:
- Add bootstrap, notifications, relay-crawler, indexers stores
- Add account-switch reset system
- Add relay pool dedup (50K capacity)
- Add MariaDB cache layer with server routes
- Add marketplace module with currency filtering
- Add relay detail and relay link components
- Update HAProxy, build config, gitignore

--- a/ribbit/package.json
+++ b/ribbit/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "dev": "bun run build.ts && bun run src/server/index.ts",
     "build": "bun run build.ts",
+    "build:prod": "NODE_ENV=production bun run build.ts",
     "start": "NODE_ENV=production bun run src/server/index.ts",
-    "dev:watch": "bun run --watch src/server/index.ts"
+    "dev:watch": "bun run --watch src/server/index.ts",
+    "lint": "eslint src/",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@noble/curves": "^1.8.0",
@@ -26,13 +29,17 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-typescript": "^7.28.6",
+    "@eslint/js": "^10.0.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/babel__core": "^7.20.5",
     "@types/bun": "latest",
     "autoprefixer": "^10.4.24",
     "babel-plugin-inferno": "^6.8.5",
+    "cssnano": "^7.1.2",
+    "eslint": "^10.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "typescript-eslint": "^8.56.0"
   }
 }
