--- a/ribbit/tsconfig.json
+++ b/ribbit/tsconfig.json
@@ -7,6 +7,9 @@
     "jsxFactory": "createElement",
     "jsxFragmentFactory": "Fragment",
     "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
